<?xml version="1.0"?>
<package format="2">
  <name>pendulum</name>
  <version>0.0.1</version>
  <description>The pendulum package</description>
  <maintainer email="pdsherman201@gmail.com">pdsherman</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
